--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/progress.css" />
   </head>
   <body>
-    <h1>Custom Video Player</h1>
+    <h1>Custom Video Player1</h1>
+    <h1>It's the time to disco</h1>
 
     <video
       src="videos/hbd_bro.mp4 "
